syntax = "proto3";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Proto.Command.TraceData";

service TraceDataCommandProtoService {
  rpc SendTraceData (TraceDataCommandProto) returns (CommandResponse);
}

message TraceDataCommandProto {
  string trace_id = 1;
  string trace_sink_id = 2;
  string use_case_meta = 3;
  string logging_meta = 4;
  string origin_class_type = 5;
  string log = 6;
  google.protobuf.Timestamp time_stamp = 7;
}

message CommandResponse {
  bool success = 1;
}